Added routes for 2 more collections and authentication
