# models/user.js
@@ -1,0 +1,41 @@
+const mongoose = require('mongoose');
+
+const userSchema = new mongoose.Schema(
+  {
+    firstName: {
+      type: String,
+      required: true,
+      trim: true
+    },
+    lastName: {
+      type: String,
+      required: true,
+      trim: true
+    },
+    email: {
+      type: String,
+      required: true,
+      trim: true
+    },
+    phone: {
+      type: String,
+      default: null,
+      trim: true
+    },
+    role: {
+      type: String,
+      enum: ['customer', 'admin', 'staff'],
+      default: 'customer'
+    },
+    isActive: {
+      type: Boolean,
+      default: true
+    }
+  },
+  {
+    timestamps: true,
+    collection: 'user'
+  }
+);
+
+module.exports = mongoose.model('User', userSchema);
