# routes/index.js
@@ -2,9 +2,10 @@ const router = require('express').Router();
 
 // Routes
 router.use('/', require('./swagger'));
-// router.use('/auth', require('./auth'));
+router.use('/auth', require('./auth'));
 router.use('/vehicle', require('./vehicle'));
 router.use('/service', require('./service'));
-// router.use('/booking', require('./booking'));
+router.use('/booking', require('./booking'));
+router.use('/user', require('./user'));
 
 module.exports = router;
